# prompt-book

./: .gitignore  README.md  REFACTOR_TAURI_ELECTRON.md  package.json  plan.md  turbo.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
PromptBook/: GlobalShortcutManager.swift  MainWindowView.swift  MenuBarView.swift  Prompt.swift  PromptBookApp.swift  PromptRankingService.swift  PromptStore.swift
PromptBook.xcodeproj/: project.pbxproj
PromptBook.xcodeproj/xcshareddata/xcschemes/: PromptBook.xcscheme  PromptBookiOS.xcscheme
PromptBook/Assets.xcassets/AppIcon.appiconset/: Contents.json
PromptBookTests/: PromptBookTests.swift
apps/: README.md
apps/desktop-tauri/: README.md  components.json  index.html  package.json  tailwind.config.js  tsconfig.json
apps/desktop-tauri/icon.icon/: icon.json
apps/desktop-tauri/src/: App.tsx  index.css  main.tsx
apps/desktop-tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs  storage.rs
apps/desktop-tauri/src/components/: icons.tsx  keyboard-shortcuts.tsx  prompt-card-actions.tsx  prompt-card-main.tsx  prompt-card-menu.tsx  prompt-card-menubar.tsx  prompt-card-utils.ts  prompt-card.tsx  prompt-list-empty.tsx  prompt-list.tsx  save-toast.tsx  search-bar.tsx
apps/desktop-tauri/src/contexts/: prompt-store-context.tsx
apps/desktop-tauri/src/data/: prompt-seed.ts
apps/desktop-tauri/src/lib/: constants.ts  (+1 more)
docs/plans/: storage.md
(+19 files in other folders)
